--- a/song-downloader-api/package.json
+++ b/song-downloader-api/package.json
@@ -10,9 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "express.js": "^1.0.0",
+    "fluent-ffmpeg": "^2.1.2",
+    "fs-extra": "^10.1.0",
     "helmet": "^5.1.0",
     "nodemon": "^2.0.19",
+    "spotifydl-core": "^0.2.0",
     "ytdl-core": "^4.11.0"
   }
 }
